<resources>
    <string name="app_name">Flip Paisa</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_test">Test</string>
    <string name="account"><u>Account Summary:</u></string>
    <string name="bonus">Bonus FP Rewards: </string>
    <string name="pending">Pending FP Rewards: </string>
    <string name="confirmed">Confirmed FP Rewards: </string>
    <string name="paid">Paid FP Rewards: </string>
    <string name="welcome">Welcome</string>
    <string name="fb"><a href="facebook.com/flippaisa">Facebook</a></string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
	<string-array name ="categories">
        <item>All</item>
        <item>Clothing</item>
        <item>Electronics</item>
        <item>Recharge</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_store_secondary">Store</string>
    <string name="title_activity_direct_to_bank">DirectToBank</string>
    <string-array name="bank">
        <item>Standard</item>
        <item>IFPS</item>
    </string-array>
    <string-array name="type">
        <item>TopUp</item>
        <item>Special</item>
    </string-array>
    <string name="title_activity_mobile_recharge">MobileRecharge</string>
    <string name="title_activity_flip_voucher">FlipVoucher</string>
    <string name="title_activity_with_draw">WithDraw</string>
</resources>
