<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Refresh"
            android:id="@+id/refresh"
            android:layout_below="@+id/paid"
            android:layout_alignRight="@+id/welcome"
            android:layout_alignEnd="@+id/welcome"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/account"
            android:id="@+id/Heading"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bonus"
            android:id="@+id/bonus"
            android:layout_below="@+id/Heading"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pending"
            android:id="@+id/pending"
            android:layout_below="@+id/bonus"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/confirmed"
            android:id="@+id/confirmed"
            android:layout_below="@+id/pending"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/paid"
            android:id="@+id/paid"
            android:layout_below="@+id/confirmed"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:id="@+id/welcome"
            android:layout_marginTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/Heading"
            android:layout_alignStart="@+id/Heading" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Direct to bank"
            android:id="@+id/toWithDraw"
            android:layout_below="@+id/paid"
            android:layout_alignLeft="@+id/Heading"
            android:layout_alignParentStart="true"
            android:layout_marginTop="57dp"
            android:onClick="diverting"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mobile Recharge"
            android:id="@+id/toWebsite"
            android:layout_below="@+id/toWithDraw"
            android:layout_alignLeft="@+id/Heading"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:onClick="diverting"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Flipkart Voucher"
            android:id="@+id/flipVoucher"
            android:layout_below="@+id/toWebsite"
            android:layout_alignLeft="@+id/Heading"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:onClick="diverting"/>
    </RelativeLayout>
</ScrollView>